ISAICP-4424: Fix margins so that the boxes do not overlap with the og menu.

--- a/web/themes/joinup/prototype/sass/components/_tallinn.sass
+++ b/web/themes/joinup/prototype/sass/components/_tallinn.sass
@@ -32,3 +32,7 @@
 
 .tallinn--completed
   background-color: $color-success
+
+details.tallinn-box
+  margin-left: 0
+  margin-right: 0
